# GEN26

./: CODE_REFERENCE.md  GENERATION_PROCESS.md  README.md  benchmark_gemma3_memory.py  main.py  prequantize_gemma3_int8.py  probe_gemma3_context.py  pyproject.toml  smoke_test_g3.py  smoke_test_g3_Q4.py  smoke_test_g4_2B.py
gen26/: __init__.py  auto.py  chunking.py  cli.py  digestion.py  gemma_runtime.py  images.py  latex_parser.py  paper_tree.py  planner.py  run_store.py  terminal_planner.py  tokenizer.py
