[project]
name = "gen26"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "gemma>=4.0.1",
    "jax[cuda12]>=0.10.1",
    "kagglehub>=1.0.1",
    "opencv-python>=4.13.0.92",
    "orbax-checkpoint>=0.12.0",
    "pylatexenc>=2.10",
    "python-dotenv>=1.2.2",
    "tensorstore>=0.1.84",
]
